--- a/src/main/resources/configs/demo.properties
+++ b/src/main/resources/configs/demo.properties
@@ -1,17 +1,7 @@
-appium.server.url=http://127.0.0.1:4723
-appium.port=4723
-appium.ip=127.0.0.1
+customer.username=auto@harakirimail.com
+customer.password=Tigran94!
+oauth.id=40181EB0-39B1-4733-B9B2-EE32D18365E9
 
-api.url=https://demoapi.buymie.eu
-dunnes.id.url=https://demomy.buymie.eu
-vcas.url=https://buymie-proxy.dsstage02.com/api/FunctionProxy
-vcas.x.functions.key=ycbO2jX3Ml717l9zjqlK9RRP7NoOGJwPWKlLZSIAjpLwAzFuZoQLuQ==
-
-card.number=4242 4242 4242 4242
-3d.card.number=4000 0025 0000 3155
-cvc=023
-exp.date=01/30
-
-shopper.username.irish=tigran_s@buymie.eu
-
-shopper.password=123
+db.url=jdbc:sqlserver://sql-buymie-demo.database.windows.net:1433;databaseName=sql-buymie-demo-004
+db.username=tigran
+db.password=?^*ArH-!$Jq3-)2w
