Configuration changes and company registration set

--- a/src/main/resources/configs/demo.properties
+++ b/src/main/resources/configs/demo.properties
@@ -1,7 +1,2 @@
-customer.username=auto@harakirimail.com
-customer.password=Tigran94!
-oauth.id=40181EB0-39B1-4733-B9B2-EE32D18365E9
-
-db.url=jdbc:sqlserver://sql-buymie-demo.database.windows.net:1433;databaseName=sql-buymie-demo-004
-db.username=tigran
-db.password=?^*ArH-!$Jq3-)2w
+company.email=auto@harakirimail.com
+company.password=Qwerty1!
