--- a/src/main/resources/configs/demo.properties
+++ b/src/main/resources/configs/demo.properties
@@ -1,2 +1,4 @@
-company.email=auto@harakirimail.com
-company.password=Qwerty1!
+company.email=company@harakirimail.com
+investor.email=investor@harakirimail.com
+password=Qwerty1!
+demo.url=https://marketglide.digitecintl.com
