--- a/src/main/resources/configs/demo.properties
+++ b/src/main/resources/configs/demo.properties
@@ -2,4 +2,4 @@ company.email=company@harakirimail.com
 investor.email=investor@harakirimail.com
 password=Qwerty1!
 
-demo.url=https://marketglide.digitecintl.com
+demo.url=https://stage.marketglide.io
